--- a/figures_hadron.tex
+++ b/figures_hadron.tex
@@ -172,3 +172,245 @@
 \end{figure}
 
 \clearpage
+
+
+
+%%%%%%%%%% FAKE REL SIG %%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c0_p1}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c1_p1}
+
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c0_p2}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c1_p2}
+
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c0_p3}
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c1_p3}
+
+  \caption{Relative standard deviation of the particle fractions obtained with SDEs for WST and 158 \GeVc dataset.}
+  \label{fig:hadron:dedx:fit:fake:relsig158w}
+\end{figure}
+
+
+
+%%%%%%%%%% FAKE REL SIG %%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c0_p1}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c1_p1}
+
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c0_p2}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c1_p2}
+
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c0_p3}
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c1_p3}
+
+
+  \caption{Relative standard deviation of the particle fractions obtained with SDEs for RST and 350 \GeVc dataset.}
+  \label{fig:hadron:dedx:fit:fake:relsig350r}
+\end{figure}
+
+%%%%%%%%%% FAKE REL SIG %%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c0_p1}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c1_p1}
+
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c0_p2}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c1_p2}
+
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c0_p3}
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c1_p3}
+
+  \caption{Relative standard deviation of the particle fractions obtained with SDEs for WST and 350 \GeVc dataset.}
+  \label{fig:hadron:dedx:fit:fake:relsig350w}
+\end{figure}
+
+
+%%%%%%%%%% FAKE REL DEV %%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c0_p1}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c1_p1}
+
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c0_p2}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c1_p2}
+
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c0_p3}
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c1_p3}
+
+  \caption{Average relative bias of the particle fractions obtained with SDEs for WST and 158 \GeVc dataset.}
+  \label{fig:hadron:dedx:fit:fake:reldev158w}
+\end{figure}
+
+
+
+%%%%%%%%%% FAKE REL DEV %%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c0_p1}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c1_p1}
+
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c0_p2}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c1_p2}
+
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c0_p3}
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c1_p3}
+
+
+  \caption{Average relative bias of the particle fractions obtained with SDEs for RST and 350 \GeVc dataset.}
+  \label{fig:hadron:dedx:fit:fake:reldev350r}
+\end{figure}
+
+%%%%%%%%%% FAKE REL DEV %%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c0_p1}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c1_p1}
+
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c0_p2}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c1_p2}
+
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c0_p3}
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c1_p3}
+
+  \caption{Average relative bias of the particle fractions obtained with SDEs for WST and 350 \GeVc dataset.}
+  \label{fig:hadron:dedx:fit:fake:reldev350w}
+\end{figure}
+
+\clearpage
+
+
+%%%%%%%%%% COR %%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_158_v1_c0_p1}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_158_v1_c1_p1}
+
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_158_v1_c0_p2}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_158_v1_c1_p2}
+
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/cor_158_v1_c0_p3}
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/cor_158_v1_c1_p3}
+
+  \caption{Correction factor for WST and 158 \GeVc dataset.}
+  \label{fig:hadron:dedx:fit:fake:cor158w}
+\end{figure}
+
+
+%%%%%%%%%% COR %%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v0_c0_p1}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v0_c1_p1}
+
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v0_c0_p2}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v0_c1_p2}
+
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/cor_350_v0_c0_p3}
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/cor_350_v0_c1_p3}
+
+  \caption{Correction factor for RST and 350 \GeVc dataset.}
+  \label{fig:hadron:dedx:fit:fake:cor350r}
+\end{figure}
+
+%%%%%%%%%% COR %%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v1_c0_p1}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v1_c1_p1}
+
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v1_c0_p2}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v1_c1_p2}
+
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/cor_350_v1_c0_p3}
+  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/cor_350_v1_c1_p3}
+
+  \caption{Correction factor for WST and 350 \GeVc dataset.}
+  \label{fig:hadron:dedx:fit:fake:cor350w}
+\end{figure}
+
+
+\clearpage
+
+%%%%%%%%%% FRACTION %%%%%%%%%%%%%%
+
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0 1 1,width=1.00\textwidth]{dedx/fraction_pt_158_fl2_v1}
+  \caption{Particle fractions obtained from the \dedx fit of the WST and 158 \GeVc dataset, with target inserted.}
+  \label{fig:hadron:dedx:fit:final158w}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0 1 1,width=1.00\textwidth]{dedx/fraction_pt_350_fl2_v0}
+  \caption{Particle fractions obtained from the \dedx fit of the RST and 350 \GeVc dataset, with target inserted.}
+  \label{fig:hadron:dedx:fit:final350r}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0 1 1,width=1.00\textwidth]{dedx/fraction_pt_350_fl2_v1}
+  \caption{Particle fractions obtained from the \dedx fit of the WST and 350 \GeVc dataset, with target inserted.}
+  \label{fig:hadron:dedx:fit:final350w}
+\end{figure}
+
+%%%%%%%%%% FRACTION OUT%%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0 1 1,width=1.00\textwidth]{dedx/fraction_out_pt_158_v0}
+  \caption{Particle fractions obtained from the \dedx fit of the RST and 158 \GeVc dataset, with target removed.}
+  \label{fig:hadron:dedx:fit:out158r}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0 1 1,width=1.00\textwidth]{dedx/fraction_out_pt_158_v1}
+  \caption{Particle fractions obtained from the \dedx fit of the WST and 158 \GeVc dataset, with target inserted.}
+  \label{fig:hadron:dedx:fit:out158w}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0 1 1,width=1.00\textwidth]{dedx/fraction_out_pt_350_v0}
+  \caption{Particle fractions obtained from the \dedx fit of the RST and 350 \GeVc dataset, with target inserted.}
+  \label{fig:hadron:dedx:fit:out350r}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0 1 1,width=1.00\textwidth]{dedx/fraction_out_pt_350_v1}
+  \caption{Particle fractions obtained from the \dedx fit of the WST and 350 \GeVc dataset, with target inserted.}
+  \label{fig:hadron:dedx:fit:out350w}
+\end{figure}
+
+\clearpage
+
+
+%%%%%%%%%% BETA %%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fac_350_All_beta_c0_p1}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fac_350_All_beta_c1_p1}
+
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fac_350_All_beta_c0_p2}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fac_350_All_beta_c1_p2}
+
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fac_350_All_beta_c0_p3}
+  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fac_350_All_beta_c1_p3}
+
+  \caption{$\beta$ correction factor for the 350 \GeVc dataset.}
+  \label{fig:hadron:correction:beta:dedx350}
+\end{figure}
+
+
+%%%%%%%%%%% BETA %%%%%%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0 1 1,width=0.95\textwidth]{vzero/beta350}
+  
+  \caption{$\beta$ correction factor for the 350 \GeVc dataset.}
+  \label{fig:hadron:correction:beta:vzero350}
+\end{figure}
+
